--- a/docs/0031.md
+++ b/docs/0031.md
@@ -49,8 +49,8 @@ The replacement must be **[in place](http://en.wikipedia.org/wiki/In-place_algor
 
 `brute-force`
 
-Time complextity:  O(`n!`) <br>
-Space complextity:  O(`n`)
+Time complextity:  `O(n!)` <br>
+Space complextity:  `O(n)`
 
 ```python
 ?
