--- a/docs/0036.md
+++ b/docs/0036.md
@@ -120,8 +120,8 @@ class Solution:
 
 `pythonic`
 
-Time complexity: O(`n`) <br>
-Space complexity: O(`3n`)
+Time complexity: `O(n)` <br>
+Space complexity: `O(3n)`
 
 ```python
 class Solution:
