--- a/docs/0046.md
+++ b/docs/0046.md
@@ -39,8 +39,8 @@ Given an array `nums` of distinct integers, return _all the possible permutation
 
 `recursive`
 
-Time complextity: O(`N*N!`) <br>
-Space complexity: O(`n!`)
+Time complextity: `O(n*n!)` <br>
+Space complexity: `O(n!)`
 
 ```python
 class Solution:
@@ -64,8 +64,8 @@ class Solution:
 
 `iterative`
 
-Time complextity: O(`N*N!`) <br>
-Space complexity: O(`n!`)
+Time complextity: `O(n*n!)` <br>
+Space complexity: `O(n!)`
 
 ```python
 class Solution:
