--- a/docs/0047.md
+++ b/docs/0047.md
@@ -36,8 +36,8 @@ Given a collection of numbers, `nums`, that might contain duplicates, return _al
 
 `recursive`
 
-Time complextity: O(`N*N!`) <br>
-Space complexity: O(`n!`)
+Time complextity: `O(n*n!)` <br>
+Space complexity: `O(n!)`
 
 ```python
 class Solution:
@@ -66,8 +66,8 @@ class Solution:
 
 `iterative`
 
-Time complextity: O(`N*N!`) <br>
-Space complexity: O(`n!`)
+Time complextity: `O(n*n!)` <br>
+Space complexity: `O(n!)`
 
 ```python
 class Solution:
