--- a/docs/0011.md
+++ b/docs/0011.md
@@ -43,7 +43,7 @@ Return _the maximum amount of water a container can store_.
 
 `brute-force`
 
-Time complexity: `O(n^2)`,  TimeoutError <br>
+Time complexity: `O(n^2)`,  TimeLimitExceeded <br>
 Space complexity: `O(1)`
 
 ```python
