--- a/docs/0001.md
+++ b/docs/0001.md
@@ -1,4 +1,6 @@
-# [<u>1</u>. Two Sum](https://leetcode.com/problems/two-sum)
+# [1. Two Sum](https://leetcode.com/problems/two-sum)
+<span style="color:green">`Easy`</span>
+
 Given an array of integers `nums` and an integer `target`, return _indices of the two numbers such that they add up to`target`_.
 
 You may assume that each input would have **_exactly_ one solution**, and you may not use the _same_ element twice.
@@ -43,11 +45,26 @@ You can return the answer in any order.
 
 **Related Topics:** `array` `hash-table`
 
+**Similar Questions:**
+
+|  No  |                             Title                             | Difficulty |
+| ---: | ------------------------------------------------------------- | ---------- |
+|   15 | [3Sum](./0015.md)                                             | Medium     |
+|   18 | 4Sum                                                          | Medium     |
+|  167 | Two Sum II - Input Array Is Sorted                            | Medium     |
+|  170 | Two Sum III - Data structure design                           | Easy       |
+|  560 | Subarray Sum Equals K                                         | Medium     |
+|  653 | Two Sum IV - Input is a BST                                   | Easy       |
+| 1099 | Two Sum Less Than K                                           | Easy       |
+| 1679 | Max Number of K-Sum Pairs                                     | Medium     |
+| 1711 | Count Good Meals                                              | Medium     |
+| 2006 | Count Number of Pairs With Absolute Difference K              | Easy       |
+| 2023 | Number of Pairs of Strings With Concatenation Equal to Target | Medium     |
+| 2200 | Find All K-Distant Indices in an Array                        | Easy       |
+
 <br>
 
 ## Solutions [^3]:
-
-### O(n)
 
 use `map`
 
@@ -71,5 +88,3 @@ class Solution:
 [^1]: `2021/10/09`
 [^2]: `2022/04/02`
 [^3]: `2022/04/09`
-
-
