--- a/docs/0003.md
+++ b/docs/0003.md
@@ -1,13 +1,14 @@
 # [3. Longest Substring Without Repeating Characters](https://leetcode.com/problems/longest-substring-without-repeating-characters)
-Given a string `s`, find the length of the **longest substring** without repeating characters.
+<span style="color:orange">`Medium`</span>
 
- 
+Given a string `s`, find the length of the **longest substring** without repeating characters.
 
 **Example 1:**
 
     Input: s = "abcabcbb"
     Output: 3
     Explanation: The answer is "abc", with the length of 3.
+
 
 **Example 2:**
 
@@ -24,17 +25,22 @@ Given a string `s`, find the length of the **longest substring** without repeati
     Notice that the answer must be a substring, "pwke" is a subsequence and not a substring.
 
 
-
-
 **Constraints:**
 
   * `0 <= s.length <= 5 * 104`
   * `s` consists of English letters, digits, symbols and spaces.
 
-
-
-
 **Related Topics:** `hash-table` `string` `sliding-window`
+
+**Similar Questions:**
+
+|  No  |                         Title                          | Difficulty |
+| ---: | ------------------------------------------------------ | ---------- |
+|  159 | Longest Substring with At Most Two Distinct Characters | Medium     |
+|  340 | Longest Substring with At Most K Distinct Characters   | Medium     |
+|  992 | Subarrays with K Different Integers                    | Hard       |
+| 1695 | Maximum Erasure Value                                  | Medium     |
+| 2067 | Number of Equal Count Substrings                       | Medium     |
 
 <br>
 
@@ -62,11 +68,11 @@ class Solution:
     def lengthOfLongestSubstring(self, s: str) -> int:
         longest = 0
         sub_string = ''
-        
+
         for c in s:
             if c not in sub_string:
                 sub_string += c
-                
+
                 if len(sub_string) > longest:
                     longest = len(sub_string)
 
@@ -75,9 +81,9 @@ class Solution:
                 # if i + 1 == len(sub_string):
                 #     sub_string = c
                 # else:
-                #     sub_string = sub_string[i + 1:] + c 
+                #     sub_string = sub_string[i + 1:] + c
                 sub_string = sub_string[sub_string.index(c) + 1:] + c
-                    
+
         return longest
 ```
 
@@ -89,7 +95,6 @@ Time complexity: `O(n) ` <br>
 Space complexity: `O(n)`
 
 ```python
-
 class Solution:
     """
               0   1   2   3   4   5   6   |
@@ -113,7 +118,7 @@ class Solution:
             # case1, 如果看不到 s[r]，我們可以通過向右移動指針來不斷增加窗口大小
             if char not in seen:
                 length = max(length, (right - left) + 1)
-            
+
             # case2, s[r] 不在當前窗口內，我們可以不斷增加窗口
             elif seen[char] < left:
                 length = max(length, (right - left) + 1)
