--- a/docs/0015.md
+++ b/docs/0015.md
@@ -1,4 +1,6 @@
 # [15. 3Sum](https://leetcode.com/problems/3sum)
+<span style="color:orange">`Medium`</span>
+
 Given an integer array nums, return all the triplets `[nums[i], nums[j], nums[k]]` such that `i != j`, `i != k`, and `j != k`, and `nums[i] + nums[j] + nums[k] == 0`.
 
 Notice that the solution set must not contain duplicate triplets.
@@ -23,17 +25,21 @@ Notice that the solution set must not contain duplicate triplets.
     Output: []
 
 
-
-
 **Constraints:**
 
   * `0 <= nums.length <= 3000`
   * `-105 <= nums[i] <= 105`
 
-
-
-
 **Related Topics:** `array` `two-pointers` `sorting`
+
+**Similar Questions:**
+
+| No  |        Title         | Difficulty |
+| --: | -------------------- | ---------- |
+|   1 | [Two Sum](./0001.md) | Easy       |
+|  16 | 3Sum Closest         | Medium     |
+|  18 | 4Sum                 | Medium     |
+| 259 | 3Sum Smaller         | Medium     |
 
 <br>
 
@@ -79,17 +85,17 @@ class Solution:
     def threeSumMulti(self, arr: List[int], target: int) -> int:
         arr.sort()
         ans = []
-        for i, n in enumerate(arr): 
+        for i, n in enumerate(arr):
             arr = self.two_sum(arr[i + 1:], )
             ans.extend(arr)
-            
+
         return ans
 
     def two_sum(self, nums, target) -> Set[List[int]]:
         ans = list()
         memo = set()
         for i, n in enumerate(nums):
-            key = target - n 
+            key = target - n
             if key not in memo:
                 memo.add(n)
                 continue
