--- a/docs/0125.md
+++ b/docs/0125.md
@@ -1,9 +1,9 @@
 # [125. Valid Palindrome](https://leetcode.com/problems/valid-palindrome)
+<span style="color:green">`Easy`</span>
+
 A phrase is a **palindrome** if, after converting all uppercase letters into lowercase letters and removing all non-alphanumeric characters, it reads the same forward and backward. Alphanumeric characters include letters and numbers.
 
 Given a string `s`, return `true` _if it is a **palindrome** , or _`false` _otherwise_.
-
- 
 
 **Example 1:**
 
@@ -26,18 +26,21 @@ Given a string `s`, return `true` _if it is a **palindrome** , or _`false` _othe
     Explanation: s is an empty string "" after removing non-alphanumeric characters.
     Since an empty string reads the same forward and backward, it is a palindrome.
 
-
-
-
 **Constraints:**
 
   * `1 <= s.length <= 2 * 105`
   * `s` consists only of printable ASCII characters.
 
-
-
-
 **Related Topics:** `two-pointers` `string`
+
+**Similar Questions:**
+
+|  No  |                             Title                             | Difficulty |
+| ---: | ------------------------------------------------------------- | ---------- |
+|  234 | Palindrome Linked List                                        | Easy       |
+|  680 | [Valid Palindrome II](./0680.md)                              | Easy       |
+| 2002 | Maximum Product of the Length of Two Palindromic Subsequences | Medium     |
+| 2108 | Find First Palindromic String in the Array                    | Easy       |
 
 <br>
 
