--- a/docs/0153.md
+++ b/docs/0153.md
@@ -1,17 +1,17 @@
 # [153. Find Minimum in Rotated Sorted Array](https://leetcode.com/problems/find-minimum-in-rotated-sorted-array)
+<span style="color:orange">`Medium`</span>
 
 Suppose an array of length `n` sorted in ascending order is **rotated** between `1` and `n` times. For example, the array `nums = [0,1,2,4,5,6,7]` might become:
 
   * `[4,5,6,7,0,1,2]` if it was rotated `4` times.
   * `[0,1,2,4,5,6,7]` if it was rotated `7` times.
 
+
 Notice that **rotating** an array `[a[0], a[1], a[2], ..., a[n-1]]` 1 time results in the array `[a[n-1], a[0], a[1], a[2], ..., a[n-2]]`.
 
 Given the sorted rotated array `nums` of **unique** elements, return _the minimum element of this array_.
 
 You must write an algorithm that runs in `O(log n) time.`
-
-
 
 **Example 1:**
 
@@ -34,8 +34,6 @@ You must write an algorithm that runs in `O(log n) time.`
     Explanation: The original array was [11,13,15,17] and it was rotated 4 times. 
 
 
-
-
 **Constraints:**
 
   * `n == nums.length`
@@ -44,9 +42,14 @@ You must write an algorithm that runs in `O(log n) time.`
   * All the integers of `nums` are **unique**.
   * `nums` is sorted and rotated between `1` and `n` times.
 
-
-
 **Related Topics:** `array` `binary-search`
+
+**Similar Questions:**
+
+| No  |                  Title                  | Difficulty |
+| --: | --------------------------------------- | ---------- |
+|  33 | Search in Rotated Sorted Array          | Medium     |
+| 154 | Find Minimum in Rotated Sorted Array II | Hard       |
 
 <br>
 
@@ -141,4 +144,3 @@ assert Solution().findMin([11,13,15,17]) == 11
 
 [^1]: `2021/09/01`
 [^2]: `2021/09/02`
-
