--- a/docs/0231.md
+++ b/docs/0231.md
@@ -1,15 +1,16 @@
 # [231. Power of Two](https://leetcode.com/problems/power-of-two)
+<span style="color:green">`Easy`</span>
+
 Given an integer `n`, return _`true` if it is a power of two. Otherwise, return `false`_.
 
 An integer `n` is a power of two, if there exists an integer `x` such that `n == 2x`.
-
- 
 
 **Example 1:**
 
     Input: n = 1
     Output: true
-    Explanation: 2^0 = 1
+    Explanation: 20 = 1
+
 
 **Example 2:**
 
@@ -24,20 +25,21 @@ An integer `n` is a power of two, if there exists an integer `x` such that `n ==
     Output: false
 
 
-
-
 **Constraints:**
 
   * `-231 <= n <= 231 - 1`
 
-
-
- 
-
 **Follow up:** Could you solve it without loops/recursion?
 
-
 **Related Topics:** `math` `bit-manipulation` `recursion`
+
+**Similar Questions:**
+
+| No  |      Title       | Difficulty |
+| --: | ---------------- | ---------- |
+| 191 | Number of 1 Bits | Easy       |
+| 326 | Power of Three   | Easy       |
+| 342 | Power of Four    | Easy       |
 
 <br>
 
@@ -88,4 +90,3 @@ class Solution:
 <br>
 
 [^1]: `2021/12/21`
-
