--- a/docs/0442.md
+++ b/docs/0442.md
@@ -1,9 +1,9 @@
 # [442. Find All Duplicates in an Array](https://leetcode.com/problems/find-all-duplicates-in-an-array)
+<span style="color:orange">`Medium`</span>
+
 Given an integer array `nums` of length `n` where all the integers of `nums` are in the range `[1, n]` and each integer appears **once** or **twice** , return _an array of all the integers that appears **twice**_.
 
-You must write an algorithm that runs in `O(n)` time and uses only constant extra space.
-
-
+You must write an algorithm that runs in `O(n) `time and uses only constant extra space.
 
 **Example 1:**
 
@@ -23,8 +23,6 @@ You must write an algorithm that runs in `O(n)` time and uses only constant extr
     Output: []
 
 
-
-
 **Constraints:**
 
   * `n == nums.length`
@@ -32,9 +30,13 @@ You must write an algorithm that runs in `O(n)` time and uses only constant extr
   * `1 <= nums[i] <= n`
   * Each element in `nums` appears **once** or **twice**.
 
-
-
 **Related Topics:** `array` `hash-table`
+
+**Similar Questions:**
+
+| No  |                  Title                   | Difficulty |
+| --: | ---------------------------------------- | ---------- |
+| 448 | Find All Numbers Disappeared in an Array | Easy       |
 
 <br>
 
