--- a/docs/0565.md
+++ b/docs/0565.md
@@ -1,4 +1,6 @@
 # [565. Array Nesting](https://leetcode.com/problems/array-nesting)
+<span style="color:orange">`Medium`</span>
+
 You are given an integer array `nums` of length `n` where `nums` is a permutation of the numbers in the range `[0, n - 1]`.
 
 You should build a set `s[k] = {nums[k], nums[nums[k]], nums[nums[nums[k]]], ... }` subjected to the following rule:
@@ -7,9 +9,8 @@ You should build a set `s[k] = {nums[k], nums[nums[k]], nums[nums[nums[k]]], ...
   * The next element in `s[k]` should be `nums[nums[k]]`, and then `nums[nums[nums[k]]]`, and so on.
   * We stop adding right before a duplicate element occurs in `s[k]`.
 
+
 Return _the longest length of a set_ `s[k]`.
-
-
 
 **Example 1:**
 
@@ -27,17 +28,21 @@ Return _the longest length of a set_ `s[k]`.
     Output: 1
 
 
-
-
 **Constraints:**
 
   * `1 <= nums.length <= 105`
   * `0 <= nums[i] < nums.length`
   * All the values of `nums` are **unique**.
 
-
-
 **Related Topics:** `array` `depth-first-search`
+
+**Similar Questions:**
+
+| No  |            Title             | Difficulty |
+| --: | ---------------------------- | ---------- |
+| 339 | Nested List Weight Sum       | Medium     |
+| 341 | Flatten Nested List Iterator | Medium     |
+| 364 | Nested List Weight Sum II    | Medium     |
 
 <br>
 
