--- a/docs/0680.md
+++ b/docs/0680.md
@@ -1,7 +1,7 @@
 # [680. Valid Palindrome II](https://leetcode.com/problems/valid-palindrome-ii)
-Given a string `s`, return `true` _if the_`s` _can be palindrome after deleting **at most one** character from it_.
+<span style="color:green">`Easy`</span>
 
- 
+Given a string `s`, return `true` _if the_`s` _can be palindrome after deleting **at most one** character from it_.
 
 **Example 1:**
 
@@ -22,17 +22,19 @@ Given a string `s`, return `true` _if the_`s` _can be palindrome after deleting 
     Output: false
 
 
-
-
 **Constraints:**
 
   * `1 <= s.length <= 105`
   * `s` consists of lowercase English letters.
 
-
-
-
 **Related Topics:** `two-pointers` `string` `greedy`
+
+**Similar Questions:**
+
+|  No  |             Title             | Difficulty |
+| ---: | ----------------------------- | ---------- |
+|  125 | [Valid Palindrome](./0125.md) | Easy       |
+| 1216 | Valid Palindrome III          | Hard       |
 
 <br>
 
