--- a/docs/1721.md
+++ b/docs/1721.md
@@ -1,9 +1,9 @@
 # [1721. Swapping Nodes in a Linked List](https://leetcode.com/problems/swapping-nodes-in-a-linked-list)
+<span style="color:orange">`Medium`</span>
+
 You are given the `head` of a linked list, and an integer `k`.
 
 Return _the head of the linked list after **swapping** the values of the _`kth` _node from the beginning and the_`kth` _node from the end (the list is **1-indexed** )._
-
- 
 
 **Example 1:**
 
@@ -19,18 +19,21 @@ Return _the head of the linked list after **swapping** the values of the _`kth` 
     Output: [7,9,6,6,8,7,3,0,9,5]
 
 
-
-
 **Constraints:**
 
   * The number of nodes in the list is `n`.
   * `1 <= k <= n <= 105`
   * `0 <= Node.val <= 100`
 
-
-
-
 **Related Topics:** `linked-list` `two-pointers`
+
+**Similar Questions:**
+
+| No  |              Title               | Difficulty |
+| --: | -------------------------------- | ---------- |
+|  19 | Remove Nth Node From End of List | Medium     |
+|  24 | Swap Nodes in Pairs              | Medium     |
+|  25 | Reverse Nodes in k-Group         | Hard       |
 
 <br>
 
