--- a/docs/0011.md
+++ b/docs/0011.md
@@ -1,4 +1,6 @@
 # [11. Container With Most Water](https://leetcode.com/problems/container-with-most-water)
+<span style="color:orange">`Medium`</span>
+
 You are given an integer array `height` of length `n`. There are `n` vertical lines drawn such that the two endpoints of the `ith` line are `(i, 0)` and `(i, height[i])`.
 
 Find two lines that together with the x-axis form a container, such that the container contains the most water.
@@ -6,8 +8,6 @@ Find two lines that together with the x-axis form a container, such that the con
 Return _the maximum amount of water a container can store_.
 
 **Notice** that you may not slant the container.
-
- 
 
 **Example 1:**
 
@@ -24,18 +24,19 @@ Return _the maximum amount of water a container can store_.
     Output: 1
 
 
-
-
 **Constraints:**
 
   * `n == height.length`
   * `2 <= n <= 105`
   * `0 <= height[i] <= 104`
 
-
-
-
 **Related Topics:** `array` `two-pointers` `greedy`
+
+**Similar Questions:**
+
+| No  |        Title        | Difficulty |
+| --: | ------------------- | ---------- |
+|  42 | Trapping Rain Water | Hard       |
 
 <br>
 
