--- a/docs/0021.md
+++ b/docs/0021.md
@@ -1,11 +1,11 @@
 # [21. Merge Two Sorted Lists](https://leetcode.com/problems/merge-two-sorted-lists)
+<span style="color:green">`Easy`</span>
+
 You are given the heads of two sorted linked lists `list1` and `list2`.
 
 Merge the two lists in a one **sorted** list. The list should be made by splicing together the nodes of the first two lists.
 
 Return _the head of the merged linked list_.
-
- 
 
 **Example 1:**
 
@@ -27,18 +27,24 @@ Return _the head of the merged linked list_.
     Output: [0]
 
 
-
-
 **Constraints:**
 
   * The number of nodes in both lists is in the range `[0, 50]`.
   * `-100 <= Node.val <= 100`
   * Both `list1` and `list2` are sorted in **non-decreasing** order.
 
-
-
-
 **Related Topics:** `linked-list` `recursion`
+
+**Similar Questions:**
+
+|  No  |                      Title                       | Difficulty |
+| ---: | ------------------------------------------------ | ---------- |
+|   23 | Merge k Sorted Lists                             | Hard       |
+|   88 | Merge Sorted Array                               | Easy       |
+|  148 | Sort List                                        | Medium     |
+|  244 | Shortest Word Distance II                        | Medium     |
+| 1634 | Add Two Polynomials Represented as Linked Lists  | Medium     |
+| 1940 | Longest Common Subsequence Between Sorted Arrays | Medium     |
 
 <br>
 
