--- a/docs/0031.md
+++ b/docs/0031.md
@@ -1,11 +1,21 @@
 # [31. Next Permutation](https://leetcode.com/problems/next-permutation)
-Implement **next permutation** , which rearranges numbers into the lexicographically next greater permutation of numbers.
+<span style="color:orange">`Medium`</span>
 
-If such an arrangement is not possible, it must rearrange it as the lowest possible order (i.e., sorted in ascending order).
+A **permutation** of an array of integers is an arrangement of its members into a sequence or linear order.
+
+  * For example, for `arr = [1,2,3]`, the following are considered permutations of `arr`: `[1,2,3]`, `[1,3,2]`, `[3,1,2]`, `[2,3,1]`.
+
+
+The **next permutation** of an array of integers is the next lexicographically greater permutation of its integer. More formally, if all the permutations of the array are sorted in one container according to their lexicographical order, then the **next permutation** of that array is the permutation that follows it in the sorted container. If such arrangement is not possible, the array must be rearranged as the lowest possible order (i.e., sorted in ascending order).
+
+  * For example, the next permutation of `arr = [1,2,3]` is `[1,3,2]`.
+  * Similarly, the next permutation of `arr = [2,3,1]` is `[3,1,2]`.
+  * While the next permutation of `arr = [3,2,1]` is `[1,2,3]` because `[3,2,1]` does not have a lexicographical larger rearrangement.
+
+
+Given an array of integers `nums`, _find the next permutation of_ `nums`.
 
 The replacement must be **[in place](http://en.wikipedia.org/wiki/In-place_algorithm)** and use only constant extra memory.
-
- 
 
 **Example 1:**
 
@@ -25,23 +35,22 @@ The replacement must be **[in place](http://en.wikipedia.org/wiki/In-place_algor
     Output: [1,5,1]
 
 
-**Example 4:**
-
-    Input: nums = [1]
-    Output: [1]
-
-
-
-
 **Constraints:**
 
   * `1 <= nums.length <= 100`
   * `0 <= nums[i] <= 100`
 
-
-
-
 **Related Topics:** `array` `two-pointers`
+
+**Similar Questions:**
+
+|  No  |                          Title                          | Difficulty |
+| ---: | ------------------------------------------------------- | ---------- |
+|   46 | [Permutations](./0046.md)                               | Medium     |
+|   47 | [Permutations II](./0047.md)                            | Medium     |
+|   60 | Permutation Sequence                                    | Hard       |
+|  267 | Palindrome Permutation II                               | Medium     |
+| 1850 | Minimum Adjacent Swaps to Reach the Kth Smallest Number | Medium     |
 
 <br>
 
