--- a/docs/0036.md
+++ b/docs/0036.md
@@ -1,4 +1,6 @@
 # [36. Valid Sudoku](https://leetcode.com/problems/valid-sudoku)
+<span style="color:orange">`Medium`</span>
+
 Determine if a `9 x 9` Sudoku board is valid. Only the filled cells need to be validated  **according to the following rules** :
 
   1. Each row must contain the digits `1-9` without repetition.
@@ -6,15 +8,11 @@ Determine if a `9 x 9` Sudoku board is valid. Only the filled cells need to be v
   3. Each of the nine `3 x 3` sub-boxes of the grid must contain the digits `1-9` without repetition.
 
 
-
 **Note:**
 
   * A Sudoku board (partially filled) could be valid but is not necessarily solvable.
   * Only the filled cells need to be validated according to the mentioned rules.
 
-
-
- 
 
 **Example 1:**
 
@@ -49,17 +47,20 @@ Determine if a `9 x 9` Sudoku board is valid. Only the filled cells need to be v
     Explanation: Same as Example 1, except with the **5** in the top left corner being modified to **8**. Since there are two 8's in the top left 3x3 sub-box, it is invalid.
 
 
-
-
 **Constraints:**
 
   * `board.length == 9`
   * `board[i].length == 9`
   * `board[i][j]` is a digit `1-9` or `'.'`.
 
-
-
 **Related Topics:** `array` `hash-table` `matrix`
+
+**Similar Questions:**
+
+|  No  |                       Title                        | Difficulty |
+| ---: | -------------------------------------------------- | ---------- |
+|   37 | Sudoku Solver                                      | Hard       |
+| 2133 | Check if Every Row and Column Contains All Numbers | Easy       |
 
 <br>
 
