--- a/docs/0046.md
+++ b/docs/0046.md
@@ -1,4 +1,5 @@
 # [46. Permutations](https://leetcode.com/problems/permutations)
+<span style="color:orange">`Medium`</span>
 
 Given an array `nums` of distinct integers, return _all the possible permutations_. You can return the answer in **any order**.
 
@@ -7,23 +8,35 @@ Given an array `nums` of distinct integers, return _all the possible permutation
     Input: nums = [1,2,3]
     Output: [[1,2,3],[1,3,2],[2,1,3],[2,3,1],[3,1,2],[3,2,1]]
 
+
 **Example 2:**
 
     Input: nums = [0,1]
     Output: [[0,1],[1,0]]
+
 
 **Example 3:**
 
     Input: nums = [1]
     Output: [[1]]
 
+
 **Constraints:**
 
-* `1 <= nums.length <= 6`
-* `-10 <= nums[i] <= 10`
-* All the integers of `nums` are **unique**.
+  * `1 <= nums.length <= 6`
+  * `-10 <= nums[i] <= 10`
+  * All the integers of `nums` are **unique**.
 
 **Related Topics:** `array` `backtracking`
+
+**Similar Questions:**
+
+| No  |             Title             | Difficulty |
+| --: | ----------------------------- | ---------- |
+|  31 | [Next Permutation](./0031.md) | Medium     |
+|  47 | [Permutations II](./0047.md)  | Medium     |
+|  60 | Permutation Sequence          | Hard       |
+|  77 | Combinations                  | Medium     |
 
 <br>
 
@@ -104,4 +117,3 @@ class Solution:
 
 [^1]: `2021/09/02`
 [^2]: `2022/04/04`
-
