--- a/docs/0047.md
+++ b/docs/0047.md
@@ -1,7 +1,7 @@
 # [47. Permutations II](https://leetcode.com/problems/permutations-ii)
-Given a collection of numbers, `nums`, that might contain duplicates, return _all possible unique permutations **in any order**._
+<span style="color:orange">`Medium`</span>
 
- 
+Given a collection of numbers, `nums`, that might contain duplicates, return _all possible unique permutations **in any order**._
 
 **Example 1:**
 
@@ -18,17 +18,21 @@ Given a collection of numbers, `nums`, that might contain duplicates, return _al
     Output: [[1,2,3],[1,3,2],[2,1,3],[2,3,1],[3,1,2],[3,2,1]]
 
 
-
-
 **Constraints:**
 
   * `1 <= nums.length <= 8`
   * `-10 <= nums[i] <= 10`
 
-
-
-
 **Related Topics:** `array` `backtracking`
+
+**Similar Questions:**
+
+| No  |             Title             | Difficulty |
+| --: | ----------------------------- | ---------- |
+|  31 | [Next Permutation](./0031.md) | Medium     |
+|  46 | [Permutations](./0046.md)     | Medium     |
+| 267 | Palindrome Permutation II     | Medium     |
+| 996 | Number of Squareful Arrays    | Hard       |
 
 <br>
 
