--- a/docs/0070.md
+++ b/docs/0070.md
@@ -1,4 +1,5 @@
 # [70. Climbing Stairs](https://leetcode.com/problems/climbing-stairs)
+<span style="color:green">`Easy`</span>
 
 You are climbing a staircase. It takes `n` steps to reach the top.
 
@@ -12,6 +13,7 @@ Each time you can either climb `1` or `2` steps. In how many distinct ways can y
     1. 1 step + 1 step
     2. 2 steps
 
+
 **Example 2:**
 
     Input: n = 3
@@ -21,11 +23,20 @@ Each time you can either climb `1` or `2` steps. In how many distinct ways can y
     2. 1 step + 2 steps
     3. 2 steps + 1 step
 
+
 **Constraints:**
 
-* `1 <= n <= 45`
+  * `1 <= n <= 45`
 
 **Related Topics:** `math` `dynamic-programming` `memoization`
+
+**Similar Questions:**
+
+|  No  |          Title           | Difficulty |
+| ---: | ------------------------ | ---------- |
+|  746 | Min Cost Climbing Stairs | Easy       |
+|  509 | Fibonacci Number         | Easy       |
+| 1137 | N-th Tribonacci Number   | Easy       |
 
 <br>
 
