--- a/docs/0344.md
+++ b/docs/0344.md
@@ -1,9 +1,9 @@
 # [344. Reverse String](https://leetcode.com/problems/reverse-string)
+<span style="color:green">`Easy`</span>
+
 Write a function that reverses a string. The input string is given as an array of characters `s`.
 
 You must do this by modifying the input array [in-place](https://en.wikipedia.org/wiki/In-place_algorithm) with `O(1)` extra memory.
-
- 
 
 **Example 1:**
 
@@ -17,17 +17,19 @@ You must do this by modifying the input array [in-place](https://en.wikipedia.or
     Output: ["h","a","n","n","a","H"]
 
 
-
-
 **Constraints:**
 
   * `1 <= s.length <= 105`
   * `s[i]` is a [printable ascii character](https://en.wikipedia.org/wiki/ASCII#Printable_characters).
 
-
-
-
 **Related Topics:** `two-pointers` `string` `recursion`
+
+**Similar Questions:**
+
+| No  |           Title            | Difficulty |
+| --: | -------------------------- | ---------- |
+| 345 | Reverse Vowels of a String | Easy       |
+| 541 | Reverse String II          | Easy       |
 
 <br>
 
